Bug 427273 - Discogs genres and styles are trimmed
Summary: Discogs genres and styles are trimmed
Status: RESOLVED FIXED
Alias: None
Product: kid3
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Manjaro Linux
: NOR normal
Target Milestone: ---
Assignee: Urs Fleisch
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-10-03 01:16 UTC by ggnnotdie
Modified: 2020-10-05 17:29 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description ggnnotdie 2020-10-03 01:16:52 UTC
SUMMARY

Example: https://www.discogs.com/release/7098349


STEPS TO REPRODUCE
1. Import discogs data
2. After filling in, we only see the first style from the list
3. 

OBSERVED RESULT
Techno

EXPECTED RESULT
Techno, Witch House, Gabber, Doomcore, Dark Ambient

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
It would be cool to add an optional separator (, / | etc) for genres/styles
Comment 1 Urs Fleisch 2020-10-05 17:27:35 UTC
Git commit 63c7a18442fd720dabb94b2042f3d8edab4674a2 by Urs Fleisch.
Committed on 05/10/2020 at 17:07.
Pushed by ufleisch into branch 'master'.

Import multiple genres from Discogs

M  +10   -8    src/plugins/discogsimport/discogsimporter.cpp

https://invent.kde.org/multimedia/kid3/commit/63c7a18442fd720dabb94b2042f3d8edab4674a2
Comment 2 Urs Fleisch 2020-10-05 17:29:13 UTC
I have now added support to import multiple genres from Discogs and MusicBrainz. You can test version git20201005 from https://sourceforge.net/projects/kid3/files/kid3/development/.