Import multiple genres from Discogs

BUG: 427273